changes on nvim and hyprland config

--- a/hyprland/waybar/style.css
+++ b/hyprland/waybar/style.css
@@ -1,7 +1,7 @@
 @import "monokai.css";
 
 * {
-  font-family: JetBrainsMono Nerd Font;
+  font-family: Hack Nerd Font;
   font-size: 15px;
   min-height: 0;
 }
